--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Sentiment Analysis</title>
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
   </head>
   <body>
     <nav>SENTIMENT ANALYSIS</nav>
@@ -21,8 +22,9 @@
         <li class="card -red">
           <div class="card--image">✤</div>
           <a href="/text">
-            <h2>Text</h2>
+            <button class="pulse">Text</button>
           </a>
+
           <p>
             Red is the color at the long wavelength end of the visible spectrum
             of light, next to orange and opposite violet.
@@ -31,7 +33,7 @@
         <li class="card -green">
           <div class="card--image">✦</div>
           <a href="/analysis">
-            <h2>Report</h2>
+            <button class="offset">Report</button>
           </a>
           <p>
             Green is the color between blue and yellow on the visible spectrum.
@@ -42,7 +44,7 @@
         <li class="card -blue">
           <div class="card--image">❖</div>
           <a href="/Face">
-            <h2>Face</h2>
+            <button class="raise">Face</button>
           </a>
           <p>
             Blue is one of the three primary colours of pigments in painting and
