--- a/public/css/face.css
+++ b/public/css/face.css
@@ -38,8 +38,41 @@ nav {
   border-top: 4px solid #c080c0;
 }
 
-.container {
+header {
+  max-width: 600px;
+  margin: 2vh auto;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 1.1;
+}
+h1 + p {
+  margin-top: 1rem;
+}
+
+/* .container {
   background-color: orange;
   height: 50vh;
   width: 68vh;
+  margin: auto;
+} */
+
+.result-container {
+  /* padding: 1em; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+canvas {
+  position: absolute;
+}
+.container {
+  display: flex;
+  /* background: orange; */
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
