--- a/views/Text.html
+++ b/views/Text.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     This is a Text Analyzer
+
+    <form id="text-form">
+      <textarea name="text-data" id="text-data" cols="30" rows="10"></textarea>
+      <button type="submit">Submit</button>
+    </form>
+
+    <script src="/js/text-main.js"></script>
   </body>
 </html>
