--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src *;
+        script-src *;
+        media-src *;
+        font-src *;
+        connect-src *;
+        img-src 'self' data: content:;"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Sentiment Analysis</title>
+    <title>Home | Mood Analyzer</title>
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/buttons.css" />
   </head>
