--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,13 @@
     <link rel="stylesheet" href="/css/buttons.css" />
   </head>
   <body>
-    <nav>SENTIMENT ANALYSIS</nav>
+    <nav>
+      SENTIMENT ANALYSIS
+
+      <form action="/auth/logout?_method=DELETE" method="post">
+        <button type="submit" class="slide">Logout</button>
+      </form>
+    </nav>
     <header>
       <h1>Fun with background gradients</h1>
       <p>
