--- a/views/Face.html
+++ b/views/Face.html
@@ -29,7 +29,7 @@
     <div class="result-container">
       <div id="emotion">Emotion</div>
     </div>
-    <button onclick="stop()" class="close">Hello</button>
+    <button onclick="stop()" class="close">STOP</button>
     <script src="/js/face-api.min.js"></script>
     <script src="/js/face-main.js"></script>
   </body>
