--- a/views/welcome.html
+++ b/views/welcome.html
@@ -5,7 +5,7 @@
       http-equiv="Content-Security-Policy"
       content="
         default-src *;
-        script-src *;
+        script-src 'self' 'unsafe-inline';
         media-src *;
         font-src *;
         connect-src *;
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/buttons.css" />
   </head>
-  <body>
+  <body onload="fetchMyData()">
     <nav>
       SENTIMENT ANALYSIS
 
       <form action="/auth/logout?_method=DELETE" method="post">
-        <button type="submit" class="slide">Logout</button>
+        <button type="submit" class="close">Logout</button>
       </form>
     </nav>
     <header>
@@ -59,7 +59,7 @@
         </li>
         <li class="card -blue">
           <div class="card--image">❖</div>
-          <a href="/Face">
+          <a href="/face">
             <button class="raise">Face</button>
           </a>
           <p>
