--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -21,10 +21,10 @@
   <body onload="fetchMyData()">
     <nav>
       SENTIMENT ANALYSIS
-
       <form action="/auth/logout?_method=DELETE" method="post">
         <button type="submit" class="close">Logout</button>
       </form>
+      Welcome <%= name %> !!!!
     </nav>
     <header>
       <h1>Fun with background gradients</h1>
