--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -47,7 +47,7 @@
           </p>
         </li>
         <li class="card -green">
-          <div class="card--image">✦</div>
+          <div title="Analysis" class="card--image">✦</div>
           <a href="/analysis">
             <button class="offset">Report</button>
           </a>
