--- a/views/Text.html
+++ b/views/Text.html
@@ -13,8 +13,8 @@
   <body>
     This is a Text Analyzer
 
-    <form id="text-form">
-      <textarea name="text-data" id="text-data" cols="30" rows="10"></textarea>
+    <form action="/text" method="POST">
+      <textarea name="Text" id="text" cols="30" rows="10"></textarea>
       <button type="submit">Submit</button>
     </form>
 
