--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self';
+        script-src *;"
+    /> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Mood Analyzer</title>
   </head>
   <body>
-    <h1>Login</h1>
-    <% if (messages.error){ %> <%= messages.error %> <% } %>
-    <form action="/auth/login" method="POST">
+    <h1>Register</h1>
+    <form action="/auth/register" method="POST">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required />
+      </div>
       <div>
         <label for="email">email</label>
         <input type="email" id="email" name="email" required />
@@ -19,9 +28,9 @@
         <input type="password" id="password" name="password" required />
       </div>
 
-      <button type="submit">login</button>
+      <button type="submit">register</button>
     </form>
 
-    <a href="/auth/register">Register</a>
+    <a href="/auth/login">Login</a>
   </body>
 </html>
