--- a/views/text.ejs
+++ b/views/text.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta
       http-equiv="Content-Security-Policy"
@@ -8,14 +8,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Text Analysis | Mood Analyzer</title>
+    <title>Facial Analysis | Mood Analyzer</title>
+    <link rel="stylesheet" href="/css/buttons.css" />
+    <link rel="stylesheet" href="/css/text.css" />
   </head>
   <body>
-    This is a Text Analyzer
+    <nav>
+      SENTIMENT ANALYSIS
+      <form action="/auth/logout?_method=DELETE" method="post">
+        <button type="submit" class="close">Logout</button>
+      </form>
+      Welcome <%= name %> !!!!
+    </nav>
 
+    <header>
+      <p>
+        Just a bit of fun while wondering about using simple and subtle CSS
+        gradients for backgrounds...
+      </p>
+    </header>
     <form action="/text" method="POST">
-      <textarea name="Text" id="text" cols="30" rows="10"></textarea>
-      <button type="submit">Submit</button>
+      <textarea name="text" id="text" cols="30" rows="10"></textarea>
+      <button class="pulse" type="submit">Submit</button>
     </form>
   </body>
 </html>
