text db and Welcome

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -27,10 +27,11 @@
       Welcome <%= name %> !!!!
     </nav>
     <header>
-      <h1>Fun with background gradients</h1>
+      <h1>Sentiment Analysis Application</h1>
       <p>
-        Just a bit of fun while wondering about using simple and subtle CSS
-        gradients for backgrounds...
+        Presenting to you the our exclusive application for sentiment analysis.
+        Please choose anyone from the given options and click on Analysis to
+        view the result.
       </p>
     </header>
     <main>
@@ -42,8 +43,8 @@
           </a>
 
           <p>
-            Red is the color at the long wavelength end of the visible spectrum
-            of light, next to orange and opposite violet.
+            Welcome to the Text Analyser. Please type in your feelings in the
+            text area provided.
           </p>
         </li>
         <li class="card -green">
@@ -52,9 +53,8 @@
             <button class="offset">Report</button>
           </a>
           <p>
-            Green is the color between blue and yellow on the visible spectrum.
-            It is evoked by light which has a dominant wavelength of roughly
-            495–570 nm.
+            Welcome to the Analysis section. Click here to view your sentiment
+            score.
           </p>
         </li>
         <li class="card -blue">
@@ -63,9 +63,8 @@
             <button class="raise">Face</button>
           </a>
           <p>
-            Blue is one of the three primary colours of pigments in painting and
-            traditional colour theory, as well as in the RGB colour model. It
-            lies between violet and green on the spectrum of visible light.
+            Welcome to the Face Analyser. Please enable the webcam access to
+            start the streaming.
           </p>
         </li>
       </ul>
