--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -28,7 +28,7 @@
       </thead>
 
       <tbody>
-        <% for(var i=0; i < sentiments.length; i++) { %>
+        <% for(var i=0; i < sentiments.FaceSentiments.length; i++) { %>
         <tr>
           <td><%= sentiments[i].createdAt %></td>
           <td><%= sentiments[i].emotion %></td>
