--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -7,6 +7,11 @@
     <title>Analysis | Mood Analyzer</title>
     <link rel="stylesheet" href="/css/analysis-face.css" />
     <link rel="stylesheet" href="/css/buttons.css" />
+
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
   </head>
   <body>
     <nav>
@@ -20,6 +25,11 @@
     <h1>All the data goes here</h1>
     <h3>sentiment score: <%= info.sentimentScore %></h3>
     <h3>emotion: <%= info.verdict %></h3>
-    <h3>GRAPH</h3>
+    <main class="main-1">
+      <h1>Result Graph</h1>
+      <br />
+      <div id="piechart"></div>
+    </main>
+    <script src="/js/analysis-min.js"></script>
   </body>
 </html>
